# Lococia-Backend

./: .gitignore  .pre-commit-config.yaml  CODE_QUALITY.md  README.md  TODO.md  pyproject.toml  requirements.txt
docker/: backend.Dockerfile
gistapi/: gistapi.py
tests/: __init__.py  test_gistapi.py
