[tool.poetry]
name = "backend-coding-challenge"
version = "0.1.0"
description = "A simple HTTP API server for searching a user's public Github Gists"
authors = ["Mohammed alJaser <maljaser23@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gistapi"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-flask = "^1.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
exclude = [
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

